Fix scroll issue on smaller screen

--- a/index.css
+++ b/index.css
@@ -26,12 +26,9 @@ body {
   width: 100%;
   overflow-x: hidden;
 }
+
 main {
   margin-top: 40px;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 nav {
   background-color: hsla(194, 85%, 43%, 0.801);
@@ -40,6 +37,12 @@ nav {
   width: 100%;
   margin-top: -40px;
   z-index: 10;
+}
+
+.navList {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
 }
 
 li {
@@ -55,9 +58,9 @@ li:hover {
 /* Class Styling */
 
 .appPic {
-  height: 250px;
+  height: 400px;
   padding: 10px;
-  width: 300px;
+  width: 400px;
 }
 
 .contact {
@@ -70,7 +73,7 @@ li:hover {
   font-family: "Fauna One", serif;
   font-size: 15px;
   line-height: 25px;
-  max-width: 800px;
+  max-width: 500px;
   padding: 20px;
   list-style-type: none;
 }
@@ -82,10 +85,11 @@ li:hover {
 }
 
 .title {
-  color: hsl(291, 33%, 45%);
+  color: white;
   font-family: "Lobster", cursive;
   font-size: 32px;
   padding: 20px;
+  text-shadow: 1px 1px 10px hsl(291, 72%, 33%);
   width: 100%;
 }
 
@@ -104,18 +108,13 @@ li:hover {
 }
 
 .info {
-  color: hsla(197, 93%, 6%, 0.801);
+  color: hsla(195, 87%, 12%, 0.801);
   padding: 10px;
+  text-shadow: 1px 1px hsla(194, 85%, 43%, 0.801);
 }
 
 .info {
   padding: 10px;
-}
-
-.navList {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
 }
 
 .proj {
@@ -123,7 +122,7 @@ li:hover {
   justify-content: center;
   display: flex;
   flex-direction: column;
-  margin: 0px;
+  margin: 20px;
   width: 100%;
 }
 
@@ -136,7 +135,8 @@ li:hover {
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding: 20px;
+  margin: 10px;
 }
 
 .skillList {
@@ -156,29 +156,19 @@ li:hover {
 
 /* Media Queries */
 
-@media screen and (min-width: 500px) {
-  .appPic {
-    height: 300px;
-    width: 400px;
+@media screen and (min-width: 700px) {
+  .proj {
+    flex-direction: row;
   }
 }
 
-@media screen and (min-width: 900px) {
-  .appPic {
-    height: 400px;
-    width: 500px;
-  }
-
+@media screen and (min-width: 1200px) {
   .js-home {
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-
-  .proj {
-    flex-direction: row;
   }
 
   .resume {
